k8s/servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  labels:
    app: foo
    monitoring: "true"  # Label for Prometheus discovery
spec:
  selector:
    app: foo
  ports:
  - port: 5678
    targetPort: 5678
    name: http

---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  labels:
    app: bar
    monitoring: "true"
spec:
  selector:
    app: bar
  ports:
  - port: 5678
    targetPort: 5678
    name: http
